--- a/styles.css
+++ b/styles.css
@@ -37,12 +37,22 @@ header, footer {
 .showAll{
     background-color: #333;
     color: #fff;
+    height: 30px;
+    border: 1px solid #ddd;
+    box-shadow: 0 0 10px #ccc;
+    padding: 3px 6px;
+}
+
+a{
+    text-decoration: none;
+    color: #fff;
 }
 
 footer{
     position: fixed;
     bottom: 0;
     width: 100%;
+    padding: 5px 0;
 }
 
 @media (max-width: 600px) {
